--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@material-table/core": "^6.4.4",
+    "@mui/icons-material": "^6.4.2",
+    "@mui/lab": "^6.0.0-beta.25",
+    "@mui/material": "^6.4.2",
+    "@mui/system": "^6.4.2",
+    "@mui/x-date-pickers": "^7.24.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "lottie-react": "^2.4.1",
@@ -13,6 +20,7 @@
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
